modules/policy-kyverno/tests/allowed-images/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: app-allowed-images
policies:
  - ../policies.yaml
variables: values.yaml
resources:
  - resources.yaml
results:
  - { policy: app-allowed-images, resources: [own-image, allowed-image, module-image], kind: Pod, result: pass }
  - { policy: app-allowed-images, resources: [other-app-image, other-registry, init-container-checked, module-image-other-digest], kind: Pod, result: fail }
